(library
 (name provider)
 (public_name provider)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a -open Base)
 (libraries base)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess
  (pps ppx_compare ppx_hash ppx_sexp_conv ppx_sexp_value)))
