(library
 (name provider_test)
 (public_name provider-test)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Expect_test_helpers_base)
 (libraries
  base
  eio
  eio_main
  expect_test_helpers_core.expect_test_helpers_base
  provider
  unix)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))

(include_subdirs qualified)
