(library
 (name provider_test)
 (package provider-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdlib_for_test)
 (libraries
  base
  provider
  provider-tests.higher_kinded
  stdlib_for_test
  test_interfaces
  test_providers)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_sexp_conv)))
