(library
 (name test_providers)
 (public_name provider-tests.test_providers)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a -open Base)
 (libraries base provider test_interfaces unix)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -check-doc-comments))
 (preprocess no_preprocessing))
