(toplevel
 (name provider_toplevel)
 (libraries provider))

(library
 (name provider_toplevel_test)
 (package provider-dev)
 (inline_tests
  (deps provider_toplevel.exe))
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries provider unix)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))

(rule
 (package provider-dev)
 (enabled_if %{bin-available:mdexp})
 (target test__magic.md.gen)
 (deps test__magic.ml)
 (action
  (with-stdout-to
   %{target}
   (run mdexp pp %{deps}))))

(rule
 (package provider-dev)
 (enabled_if %{bin-available:mdexp})
 (alias runtest)
 (action
  (diff test__magic.md test__magic.md.gen)))

(rule
 (package provider-dev)
 (enabled_if %{bin-available:mdexp})
 (target test__magic2.md.gen)
 (deps test__magic2.ml)
 (action
  (with-stdout-to
   %{target}
   (run mdexp pp %{deps}))))

(rule
 (package provider-dev)
 (enabled_if %{bin-available:mdexp})
 (alias runtest)
 (action
  (diff test__magic2.md test__magic2.md.gen)))

(rule
 (package provider-dev)
 (enabled_if %{bin-available:mdexp})
 (target test__magic3.md.gen)
 (deps test__magic3.ml)
 (action
  (with-stdout-to
   %{target}
   (run mdexp pp %{deps}))))

(rule
 (package provider-dev)
 (enabled_if %{bin-available:mdexp})
 (alias runtest)
 (action
  (diff test__magic3.md test__magic3.md.gen)))
