(library
 (name provider_doc_reference)
 (package provider-dev)
 (inline_tests)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries provider)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))

(rule
 (target hello_world.md.gen)
 (deps hello_world.ml)
 (action
  (with-stdout-to
   %{target}
   (run mdexp pp %{deps}))))

(rule
 (package provider-dev)
 (alias runtest)
 (action
  (diff hello_world.md hello_world.md.gen)))
