(library
 (name provider_doc_lookup_strategy)
 (package provider-dev)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdlib_for_test)
 (libraries base stdlib_for_test)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))

(rule
 (package provider-dev)
 (enabled_if %{bin-available:mdexp})
 (target lookup_strategy.md.gen)
 (deps lookup_strategy.ml)
 (action
  (with-stdout-to
   %{target}
   (run mdexp pp %{deps}))))

(rule
 (package provider-dev)
 (enabled_if %{bin-available:mdexp})
 (alias runtest)
 (action
  (diff README.md lookup_strategy.md.gen)))
