(library
 (name provider_doc_tutorial_provider_explicit)
 (package provider-dev)
 (inline_tests
  (deps provider_toplevel.exe))
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries provider provider-tests.higher_kinded provider_toplevel_test)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))

(rule
 (package provider-dev)
 (enabled_if %{bin-available:mdexp})
 (target provider_explicit.md.gen)
 (deps provider_explicit.ml)
 (action
  (with-stdout-to
   %{target}
   (run mdexp pp %{deps}))))

(rule
 (package provider-dev)
 (enabled_if %{bin-available:mdexp})
 (alias runtest)
 (action
  (diff README.md provider_explicit.md.gen)))

(rule
 (package provider-dev)
 (target provider_toplevel.exe)
 (deps
  (:exe %{project_root}/test/toplevel/provider_toplevel.exe))
 (action
  (copy %{exe} %{target})))
